# BooksInsight-Portal

./: .env.example  .gitignore  README.md  SystemArchitecture.md  docker-compose.yml  idea.md  openSource.md  plan.md  ux.md
.github/workflows/: ci.yml
backend/: Dockerfile  booksinsight.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: cases.py  chat.py  computation.py  documents.py  extraction.py  intake.py  review.py  validation.py
backend/app/auth/: clerk.py
backend/app/models/: audit_log.py  case.py  chat_message.py  computation.py  document.py  review.py  tax_facts.py
backend/app/schemas/: case.py  computation.py  document.py  intake.py  review.py  tax_facts.py  validation.py
backend/app/services/: audit_service.py  document_service.py  engine_adapter.py  explanation_service.py  interview_service.py  validation_service.py
backend/app/utils/: storage.py
backend/tests/: test_api.py  test_engine.py  test_validation.py
clerk-mcp/: README.md  pyproject.toml  server.py
frontend/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/prisma/: schema.prisma
frontend/src/: middleware.ts
frontend/src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/hooks/: use-api.ts
frontend/src/lib/: api.ts  auth-token-provider.tsx  auth.ts  db.ts  openai.ts  serialize.ts  types.ts
frontend/src/services/: audit-service.ts  document-service.ts  tax-engine.ts  (+3 more)
(+27 files in other folders)
